--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php":">=5.3.2",
         "symfony/symfony" : ">2.8",
         "symfony/framework-bundle": ">2.8",
-        "twig/twig": "~1.3",
+        "twig/twig": "~1.3||^2.0",
         "twig/extensions": "~1.4",
         "doctrine/orm": "~2.5",
         "doctrine/doctrine-bundle": "~1.6"
